--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,14 +20,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
     testCompile 'junit:junit:4.12'
-
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
-
     // Dependency for Google Sign-In
     compile 'com.google.android.gms:play-services-auth:8.4.0'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
